<resources>
    <string name="app_name">Project</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <string name="propertysearch">PropertySearch</string>
    <string name="renting_history">Renting History</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="title_activity_home2">Home2Activity</string>
</resources>