<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/propertysearch" />

        <item
            android:id="@+id/nav_gallery1"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/renting_history" />
        <item
            android:id="@+id/nav_gallery2"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_arrow_circle_left_24"
            android:title="@string/logout" />
    </group>
</menu>